spacing fix

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -578,6 +578,7 @@ body {
 }
 	.multi-select > input {
 		width: 100%;
+		box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
 	}
 	.multi-select .options {
 		display: flex;
